2011-02-03  MORITA Hajime  <morrita@google.com>

        Reviewed by Darin Fisher.

        [Chromium] Should implement EditorClientImpl::requestCheckingOfString()
        https://bugs.webkit.org/show_bug.cgi?id=51013

        - Added WebTextCheckingCompletion to receive the checked result asynchronously.
        - Added WebViewClient::requestCheckingOfText() and related classes.
        - Implemented EditorClientImpl::requestCheckingOfString().

        * WebKit.gyp:
        * public/WebSettings.h:
        * public/WebTextCheckingCompletion.h: Added.
        (WebKit::WebTextCheckingCompletion::~WebTextCheckingCompletion):
        * public/WebTextCheckingResult.h: Added.
        (WebKit::WebTextCheckingResult::error):
        (WebKit::WebTextCheckingResult::position):
        (WebKit::WebTextCheckingResult::length):
        (WebKit::WebTextCheckingResult::WebTextCheckingResult):
        * public/WebViewClient.h:
        (WebKit::WebViewClient::requestCheckingOfText): Gave an implementation
        * src/AssertMatchingEnums.cpp:
        * src/EditorClientImpl.cpp:
        (WebKit::EditorClientImpl::requestCheckingOfString):
        * src/EditorClientImpl.h:
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::setAsynchronousSpellCheckingEnabled):
        * src/WebSettingsImpl.h:
        * src/WebTextCheckingCompletionImpl.cpp: Added.
        (WebKit::toCoreResults):
        (WebKit::WebTextCheckingCompletionImpl::didFinishCheckingText):
        * src/WebTextCheckingCompletionImpl.h: Added.
        (WebKit::WebTextCheckingCompletionImpl::WebTextCheckingCompletionImpl):

2011-02-07  Enrica Casucci  <enrica@apple.com>

        Reviewed Adam Roben and Darin Adler.

        WebKit2: drag and drop support on Windows.
        https://bugs.webkit.org/show_bug.cgi?id=52775

        Removed createDragImageForLink from DragClient.
        
        * src/DragClientImpl.cpp:
        * src/DragClientImpl.h:

2011-02-04  Charlie Reis  <creis@chromium.org>
